--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 <body>
     <!-- CLASSIFICATION BANNER -->
     <div class="classification-banner">
-        TOP SECRET // NOFORN // BLACKNET OPERATIVE EYES ONLY
+        BLACKNET OPERATIVE EYES ONLY
     </div>
 
     <!-- MAIN CONTAINER -->
@@ -465,7 +465,7 @@
 
         <!-- SCANNER AREA -->
         <div class="scanner-area">
-            <div class="scanner-title">OPERATIVE VERIFICATION</div>
+            <div class="scanner-title">OPERATIVE ID VERIFICATION</div>
             <div class="scanner-instruction">
                 Position operative identification QR code within scanner frame.
                 Ensure adequate lighting and stable camera positioning.
@@ -515,7 +515,7 @@
                 All verification events are logged and encrypted. Unauthorized access is prohibited.
             </div>
             <div class="protocol-notice">
-                Protocol Version: 2.7.1 | Last Updated: 2024-01-15
+                Protocol Version: 2.7.1 | Last Updated: 2026-01-29
             </div>
         </div>
     </div>
@@ -528,11 +528,11 @@
         const OPERATIVES = [
             {
                 reference: "X72002DZD",
-                designation: "RR29",
+                designation: "Mr. RedRaccoon29",
                 title: "Data Manipulation Specialist",
                 clearance: "LEVEL 7",
                 status: "ACTIVE",
-                secure_email: "operative.rr29@secure.blacknet",
+                secure_email: "ibmrx@protonmail.com",
                 verification_count: 0
             }
             // Additional operatives can be added here
