--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLACKNET OPERATIVE - Verification System</title>
+    <title>BLACKNET ID</title>
     <link rel="icon" type="image/png" href="https://uploads.onecompiler.io/437muad7y/44c5p4unt/LOGO%20W%20BACKGROUND.png">
     
     <style>
