Update designation for operative in index.html

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
         const OPERATIVES = [
             {
                 reference: "X72002DZD",
-                designation: "Mr. RedRaccoon29",
+                designation: "Mr. RedRaccoon",
                 title: "Data Manipulation Specialist",
                 clearance: "LEVEL 7",
                 status: "ACTIVE",
