Update system title to 'Secure Agent Identity Verification System'

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                      class="logo">
             </div>
             <div class="org-name">BLACKNET OPERATIVE</div>
-            <div class="system-title">Secure Identity Verification System</div>
+            <div class="system-title">Secure Agent Identity Verification System</div>
         </div>
 
         <!-- STATUS PANEL -->
